06-security/12-frontend-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depo-green
  namespace: prod
spec:
  replicas: 3
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend-green
  template:
    metadata:
      labels:
        app: frontend-green
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
        - name: frontend-green
          image: harishnshetty/frontend-signed:green
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
            requests:
              memory: "64Mi"
              cpu: "128m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-green
  namespace: prod
spec:
  selector:
    app: frontend-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
